feat(share-video) update share video tests to include generic video sharing

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ target/
 # PSNR test sequences and output files
 resources/psnr/output/
 resources/psnr/test_sequences/
+
+# VSCode files
+.classpath
+.project
+.settings
