--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>2.22.2</version>
                 <configuration>
                     <reportsDirectory>${test.report.directory}</reportsDirectory>
                     <suiteXmlFiles>
@@ -230,14 +230,6 @@
                             <value>continue</value>
                         </property>
                         <property>
-                            <name>parallel</name>
-                            <value>tests</value>
-                        </property>
-                        <property>
-                            <name>threadcount</name>
-                            <value>${threadcount}</value>
-                        </property>
-                        <property>
                             <name>usedefaultlisteners</name>
                             <value>false</value>
                         </property>
@@ -246,6 +238,8 @@
                             <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
                         </property>
                     </properties>
+                    <parallel>tests</parallel>
+                    <threadCount>${threadcount}</threadCount>
                 </configuration>
             </plugin>
 
