Update mvn-compiler-plugin, try to fix java version.

--- a/pom.xml
+++ b/pom.xml
@@ -251,10 +251,9 @@
 
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.11.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
 
