--- a/pom.xml
+++ b/pom.xml
@@ -251,7 +251,7 @@
                         </property>
                     </properties>
                     <parallel>tests</parallel>
-                    <threadCount>${threadcount}</threadCount>
+                    <threadCount>4</threadCount>
                 </configuration>
             </plugin>
 
